put back Bench M + ef grid